# build-qt5

./: .gitignore  README.md  build-qt5.sh
common/: common.sh  config  do_3rdparty.sh  do_compile.sh  do_configure.sh  do_deploy.sh  do_fetch.sh  do_toolchain.sh  do_vendor.sh
sources/android_embedded_depends/Boost-for-Android/: build-android.sh
sources/android_embedded_depends/libsffg/: Android.bp  libsffg.h
sources/android_embedded_depends/libsffg_host/: Android.bp  libsffg.cpp
sources/android_embedded_depends/pthread/: CMakeLists.txt  pthread.c
sources/android_embedded_depends/rt/: CMakeLists.txt  rt.c
sources/capicxx-core-runtime/: CMakeLists.txt
sources/capicxx-core-runtime/src/CommonAPI/: Utils.cpp
sources/capicxx-someip-runtime/: CMakeLists.txt
sources/dlt-daemon/src/console/: dlt-control-common.c
sources/dlt-daemon/src/daemon/: dlt_daemon_common_cfg.h
sources/fdbus/server/: main_hs.cpp
sources/vsomeip/: CMakeLists.txt
sources/vsomeip/implementation/helper/1.74/boost/asio/detail/: reactive_socket_recvfrom_op_ext_local.hpp  reactive_socket_recvmsg_op_ext.hpp
sources/vsomeip/implementation/tracing/src/: connector_impl.cpp
